[package]
name = "voting_system"
version = "0.1.0"
authors = ["Limousen <lauti.alcorta@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0", default-features = false }


[dev-dependencies]
ink_e2e = { version = "5.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
